--- a/Tienda.Common/Tienda.Web/appsettings.json
+++ b/Tienda.Common/Tienda.Web/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=OPPCTI50\\DEVCONFISA;Initial Catalog=TiendaTest;User ID=rrssuser;Password=Confisa123"
+    //"Server(localdb)\\MSSQLLocalDB;Database=OnSale;Truested_Connection=True; MutipleActiveResultSets=True"
+  }
 }
